--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,17 +1,25 @@
-.header {
+.header-container {
     background-color: rgb(0, 128, 255);
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.header {
+    display: flex;
     color: white;
     font-family: 'Lato', sans-serif;
     width: 100vw;
-    display: flex;
     align-items: center;
     font-size: 20px;
     height: 70px;
+    width: 700px;
+    padding: 10px 0px;
 }
 
 .logo {
     height: 50px;
     padding-right: 10px;
-    margin-left: 30px;
 }
 
